--- a/Assignments/Assignment_1/index.html
+++ b/Assignments/Assignment_1/index.html
@@ -1,3 +1,6 @@
+<!-- Saketh Lakshmanan Sathiskumar -->
+<!-- UCID: sl778 -->
+<!-- Date submitted: 02/08/2023 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
