fixes image issues

--- a/Assignments/Assignment_1/index.html
+++ b/Assignments/Assignment_1/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class = "container">
         <h2 class="text-center">Name</h2>
-        <img src="profilePic.jpeg" alt="Profile Image" width="300" height="300">
+        <img src="profilePic copy.jpeg" alt="Profile Image" width="300" height="300">
         <p>Hi, my name is Saketh Lakshmanan. I am a senior at NJIT. I love to play football and make art.</p>
         <p>Phone: 973-____-4901</p>
         <p>Email: sl778@njit.edu</p>
