finished python exercise

--- a/Assignments/Assignment_1/index.html
+++ b/Assignments/Assignment_1/index.html
@@ -8,17 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Saketh's Resume</title>
 </head>
 <body>
     <div class = "container">
-        <h2 class="text-center">Name</h2>
+        <h2 class="text-center text-white">Name</h2>
         <img src="profilePic copy.jpeg" alt="Profile Image" width="300" height="300">
-        <p>Hi, my name is Saketh Lakshmanan. I am a senior at NJIT. I love to play football and make art.</p>
-        <p>Phone: 973-____-4901</p>
-        <p>Email: sl778@njit.edu</p>
-        <p>Github: <a href="https://github.com/sakethl20">https://github.com/sakethl20</a></p>
+        <p class="text-white">Hi, my name is Saketh Lakshmanan. I am a senior at NJIT. I love to play football and make art.</p>
+        <p class="text-white">Phone: 973-____-4901</p>
+        <p class="text-white">Email: sl778@njit.edu</p>
+        <p class="text-white">Github: <a href="https://github.com/sakethl20" class="text-decoration-none">https://github.com/sakethl20</a></p>
     </div>
     <div>
         <button id="hide">Hide Information</button>
