--- a/Assignments/Assignment_1/index.html
+++ b/Assignments/Assignment_1/index.html
@@ -14,22 +14,22 @@
 </head>
 <body>
     <div class = "container">
-        <h2 class="text-center text-white">Name</h2>
+        <h2 class="text-center text-black">Name</h2>
         <img src="profilePic copy.jpeg" alt="Profile Image" width="300" height="300">
-        <p class="text-white">Hi, my name is Saketh Lakshmanan. I am a senior at NJIT. I love to play football and make art.</p>
-        <p class="text-white">Phone: 973-____-4901</p>
-        <p class="text-white">Email: sl778@njit.edu</p>
-        <p class="text-white">Github: <a href="https://github.com/sakethl20" class="text-decoration-none">https://github.com/sakethl20</a></p>
+        <p class="text-black">Hi, my name is Saketh Lakshmanan. I am a senior at NJIT. I love to play football and make art.</p>
+        <p class="text-black">Phone: 973-____-4901</p>
+        <p class="text-black">Email: sl778@njit.edu</p>
+        <p class="text-black">Github: <a href="https://github.com/sakethl20" class="text-decoration-none">https://github.com/sakethl20</a></p>
     </div>
-    <div>
-        <button id="hide">Hide Information</button>
-        <button id="show">Show Information</button>
-    </div>
+    <div class="d-flex justify-content-center">
+        <button id="hide" class="btn btn-outline-primary">Hide Information</button>
+        <button id="show" class="btn btn-outline-danger">Show Information</button>
+    </div>      
     <div>
         <h1>Main</h1>
         <div>
             <h2 class="text-center">Education</h2>
-            <table id = "firstTable">
+            <table class="table table-striped">
                 <tr>
                     <th>University</th>
                     <th>Degree</th>
@@ -44,7 +44,7 @@
         </div>
         <div>
             <h2 class="text-center">Experience</h2>
-            <table id = "secondTable">
+            <table class="table table-striped">
                 <tr>
                     <th>Company</th>
                     <th>Position</th>
@@ -59,7 +59,7 @@
         </div>
         <div>
             <h2 class="text-center">Skills</h2>
-            <table id = "thirdTable">
+            <table class="table table-striped">
                 <tr>
                     <th>Applications</th>
                     <th>Languages</th>
@@ -75,21 +75,33 @@
     </div>
     <div>
         <h1>Contact Form</h1>
-        <form>
-            <label for="subject">Subject:</label>
-            <input type="text" id="subject" name="subject"><br><br>
-            <label for="firstname">First Name:</label>
-            <input type="text" id="firstname" name="firstname"><br><br>
-            <label for="lastname">Last Name:</label>
-            <input type="text" id="lastname" name="lastname"><br><br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email"><br><br>
-            <label for="phone">Phone Number:</label>
-            <input type="tel" id="phone" name="phone"><br><br>
-            <label for="message">Message:</label><br>
-            <textarea id="message" name="message" rows="5" cols="30"></textarea><br><br>
-            <input type="submit" value="Submit">
-        </form>
+        <form action="/action_page.php">
+            <div class="mb-3 mt-3">
+              <label for="subject" class="form-label">Subject:</label>
+              <input type="text" class="form-control" id="subject" placeholder="Enter subject" name="subject">
+            </div>
+            <div class="mb-3">
+              <label for="first name" class="form-label">First Name:</label>
+              <input type="text" class="form-control" id="first name" placeholder="Enter first name" name="first name">
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="last name" class="form-label">Last Name:</label>
+                <input type="text" class="form-control" id="last name" placeholder="Enter last name" name="last name">
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="phone" class="form-label">Phone:</label>
+                <input type="tel" class="form-control" id="phone" placeholder="Enter phone" name="phone">
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="msg">Message:</label>
+                <textarea class="form-control" rows="5" id="messsage" placeholder="Enter message" name="message"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
     </div>
     <script src="script.js"></script>
   </body>
