--- a/Assignments/Assignment_1/index.html
+++ b/Assignments/Assignment_1/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class = "container">
         <h2 class="text-center text-black">Name</h2>
-        <img src="profilePic copy.jpeg" alt="Profile Image" width="300" height="300">
+        <img src="profilePic copy.jpeg" class="rounded-circle" alt="Profile Image" width="400" height="400">
         <p class="text-black">Hi, my name is Saketh Lakshmanan. I am a senior at NJIT. I love to play football and make art.</p>
         <p class="text-black">Phone: 973-____-4901</p>
         <p class="text-black">Email: sl778@njit.edu</p>
